# EDD_EX_002

./: CMakeLists.txt  codigo_huffman_main  codigo_huffman_main.c  decodificador_binario  decodificador_binario.c  decompressed.txt  huffman_test02  huffman_test02.c  main.c  mainn.c  romantico_viajero_main  romantico_viajero_main.c  rutas.c  rutas_2.txt  rutas_3.txt  rutas_far.txt  salmo23.txt  sample_huffman.c
arbol_huffman/: comprimido_binario.txt  decodificador_binario  decodificador_binario.c  huffman_test02  huffman_test02.c
codigo_huffman/: comparar_frecuencias.h  construir_arbol.h  crear_nodos_hoja.h  generar_codigo_huffman.h  salmo23.txt  struct_cod_arbol_huffman.h  unir_nodos.h
vendedor_viajero/: vendedor_viajero.c
